[gd_scene load_steps=9 format=3 uid="uid://c18pw5n2qt187"]

[ext_resource type="Script" uid="uid://dbco26eokfq5p" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://1s6yaycnovqe" path="res://icons/oxygen.png" id="2_0xm2m"]
[ext_resource type="Texture2D" uid="uid://bg8r0jrewlsyg" path="res://icons/placeholder.png" id="3_h2yge"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ig7tw"]
bg_color = Color(0.115, 0.18400002, 0.46, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xm2m"]
bg_color = Color(0.2, 0.55999994, 0.8, 1)

[sub_resource type="SystemFont" id="SystemFont_ig7tw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h2yge"]
texture = ExtResource("2_0xm2m")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1bvp3"]
texture = ExtResource("3_h2yge")

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
ignore_rotation = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.050980393, 0.09411765, 0.2, 1)

[node name="OxyBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.1
anchor_bottom = 0.1
offset_right = 100.0
offset_bottom = 30.0
theme_override_styles/background = SubResource("StyleBoxFlat_ig7tw")
theme_override_styles/fill = SubResource("StyleBoxFlat_0xm2m")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="CurrentOxyText" type="RichTextLabel" parent="CanvasLayer/OxyBar"]
layout_mode = 1
anchors_preset = -1
offset_top = 30.0
theme_override_fonts/normal_font = SubResource("SystemFont_ig7tw")
bbcode_enabled = true
text = "5"
fit_content = true
autowrap_mode = 0

[node name="MaxOxyText" type="RichTextLabel" parent="CanvasLayer/OxyBar"]
layout_mode = 1
anchors_preset = -1
offset_left = 100.0
offset_top = 30.0
offset_right = 100.0
grow_horizontal = 0
theme_override_fonts/normal_font = SubResource("SystemFont_ig7tw")
bbcode_enabled = true
text = "5"
fit_content = true
autowrap_mode = 0

[node name="DepthText" type="RichTextLabel" parent="CanvasLayer/OxyBar"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 64.0
offset_right = 50.0
theme_override_fonts/normal_font = SubResource("SystemFont_ig7tw")
bbcode_enabled = true
text = "5"
fit_content = true
autowrap_mode = 0

[node name="OxyIcon" type="Panel" parent="CanvasLayer/OxyBar"]
modulate = Color(0.2, 0.56078434, 0.8, 1)
layout_mode = 1
anchors_preset = -1
offset_left = -45.0
offset_right = -15.0
offset_bottom = 30.000015
theme_override_styles/panel = SubResource("StyleBoxTexture_h2yge")

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.1
anchor_bottom = 0.1
offset_top = 60.0
offset_right = 42.0
offset_bottom = 91.0
text = "Dive"
alignment = 0

[node name="MemIcon" type="Panel" parent="CanvasLayer"]
self_modulate = Color(0.4509804, 0.5058824, 1, 1)
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.1
anchor_bottom = 0.1
offset_left = -45.0
offset_top = 100.0
offset_right = -15.0
offset_bottom = 130.0
theme_override_styles/panel = SubResource("StyleBoxTexture_1bvp3")

[node name="MemLabel" type="RichTextLabel" parent="CanvasLayer/MemIcon"]
layout_mode = 1
anchors_preset = -1
offset_left = 45.0
offset_top = -5.0
theme_override_fonts/normal_font = SubResource("SystemFont_ig7tw")
bbcode_enabled = true
text = "Memories"
fit_content = true
autowrap_mode = 0

[node name="MemNumber" type="RichTextLabel" parent="CanvasLayer/MemIcon"]
layout_mode = 1
anchors_preset = -1
offset_left = 45.0
offset_top = 12.0
theme_override_fonts/normal_font = SubResource("SystemFont_ig7tw")
bbcode_enabled = true
text = "0"
fit_content = true
autowrap_mode = 0

[node name="MemChange" type="RichTextLabel" parent="CanvasLayer/MemIcon"]
self_modulate = Color(1, 1, 1, 0.3764706)
layout_mode = 1
anchors_preset = -1
offset_left = 59.0
offset_top = 12.0
theme_override_fonts/normal_font = SubResource("SystemFont_ig7tw")
bbcode_enabled = true
text = "+ 0"
fit_content = true
autowrap_mode = 0

[node name="MemThres" type="RichTextLabel" parent="CanvasLayer/MemIcon"]
self_modulate = Color(1, 1, 1, 0.3764706)
layout_mode = 1
anchors_preset = -1
offset_left = 45.0
offset_top = 30.0
theme_override_fonts/normal_font = SubResource("SystemFont_ig7tw")
bbcode_enabled = true
text = "Next at 5m"
fit_content = true
autowrap_mode = 0

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
